--- a/_posts/2019-09-01-balboa.markdown
+++ b/_posts/2019-09-01-balboa.markdown
@@ -3,12 +3,16 @@ layout: post
 author: nelson
 ---
 
-Today we had a ton of fun on Balboa Island!
+After Praveen and Roopika's lovely wedding, we had a free morning to explore Newport Beach.
 
-![](/assets/images/IMG_20190901_075727.jpg)
+We had a nice run to Balboa Island.
+![](/assets/images/3.png)
 
-![](/assets/images/IMG_20190901_075939.jpg)
+And explored Balboa and Newport Piers:.
+![](/assets/images/4.png)
 
-![](/assets/images/MVIMG_20190901_084301.jpg)
+Tried to find the [money in the banana stand](https://www.rollingstone.com/tv/tv-lists/arrested-development-the-funniest-running-jokes-48542/the-banana-stand-46247/).
+![](/assets/images/2.png)
 
-![](/assets/images/MVIMG_20190901_101535.jpg)
+And indulged in a classic "Bluth's Original Frozen Banana".
+![](/assets/images/1.png)
