--- a/_posts/2019-09-01-balboa.markdown
+++ b/_posts/2019-09-01-balboa.markdown
@@ -8,7 +8,7 @@ After Praveen and Roopika's lovely wedding, we had a free morning to explore New
 We had a nice run to Balboa Island.
 ![](/assets/images/3.png)
 
-And explored Balboa and Newport Piers:.
+And explored Balboa and Newport Piers.
 ![](/assets/images/4.png)
 
 Tried to find the [money in the banana stand](https://www.rollingstone.com/tv/tv-lists/arrested-development-the-funniest-running-jokes-48542/the-banana-stand-46247/).
