--- a/_posts/2019-09-01-balboa.markdown
+++ b/_posts/2019-09-01-balboa.markdown
@@ -6,13 +6,13 @@ author: nelson
 After Praveen and Roopika's lovely wedding, we had a free morning to explore Newport Beach.
 
 We had a nice run to Balboa Island.
-![](/images/3.png)
+![](/images/3.jpg)
 
 And explored Balboa and Newport Piers.
-![](/images/4.png)
+![](/images/4.jpg)
 
 Tried to find the [money in the banana stand](https://www.rollingstone.com/tv/tv-lists/arrested-development-the-funniest-running-jokes-48542/the-banana-stand-46247/).
-![](/images/2.png)
+![](/images/2.jpg)
 
 And indulged in a classic "Bluth's Original Frozen Banana".
-![](/images/1.png)
+![](/images/1.jpg)
