--- a/_posts/2019-09-09-banff.markdown
+++ b/_posts/2019-09-09-banff.markdown
@@ -9,25 +9,25 @@ Here's a short video overview of our trip and the event:
 <iframe width="560" height="315" src="https://www.youtube.com/embed/1UrsDCf3wes" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 A relatively large wedding hiking group hiking [Johnston Canyon](https://www.banfflakelouise.com/johnston-canyon):
-![](/images/5.png)
+![](/images/5.jpg)
 
 The view from dinner up the gondola at [Northern Lights Restaurant](http://northernlightsrestaurant.ca/Entrees%202.pdf):
-![](/images/6.png)
+![](/images/6.jpg)
 
 Post-dinner view of Banff at night:
-![](/images/7.png)
+![](/images/7.jpg)
 
 Lake Louise was an obligatory stop:
-![](/images/8.png)
+![](/images/8.jpg)
 
 Lake Louise in the background coming back from our 14 kilometer hike on [Plain of the Six Glaciers Trail](https://www.alltrails.com/trail/canada/alberta/plain-of-the-six-glaciers-trail)
-![](/images/9.png)
+![](/images/9.jpg)
 
 Pre-wedding photos at Emerald Lake:
-![](/images/10.png)
+![](/images/10.jpg)
 
 A view of the hotel at sunrise:
-![](/images/11.png)
+![](/images/11.jpg)
 
 Flying home from the North:
-![](/images/12.png)
+![](/images/12.jpg)
