add munich video

--- a/_posts/2019-09-22-munich.markdown
+++ b/_posts/2019-09-22-munich.markdown
@@ -9,6 +9,9 @@ In order to avoid the Day 1 crowds, we had a pre-Oktoberfest meal at the world-f
 
 Our next day in Germany, we decided to escape the crowds and take a tour into the Bavarian countryside, visiting Linderhof Palace, the town of Oberammergau, and Neuschwanstein Castle, which is said to have inspired Walt Disney to create Disneyland Castle.
 
+Here's a short video overview:
+<iframe width="560" height="315" src="https://www.youtube.com/embed/UiJChkRGIVY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
 ![](/images/24.jpg)
 *The Rathaus-Glockenspiel in Marienplatz*
 
