--- a/_posts/2019-09-28-slovenia.markdown
+++ b/_posts/2019-09-28-slovenia.markdown
@@ -42,5 +42,9 @@ We took one of our days to go up into the Kamnik Alps (by way of Kamnik) to visi
 ![](/images/41.jpg)
 *Kamnik and Velika Planina*
 
+Overall, we were very impressed with the food. Slovenian cuisine incorporates a bit of everything from each of its geographical neighbors. The traditional desserts were so-so. We had a few different types of štruklji (both sweet and savory), the famous Lake Bled Cream Cake (kremsnita), and prekmurska gibanica (a pastry with seeds, walnuts, apples, raisins, cheese, and cream). We were welcomed to our Bled hotel with two shots of blueberry žganje, a type of local brandy.
+
+The wine was an interesting story. Apparently the wine is rarely exported because there are only small producers and the Slovenians drink almost all their wine domestically. "Orange" wine, produced from white grapes with a long maceration period, is pretty popular here, as is a mixture of red and white wine known as cviček.
+
 ![](/images/42.jpg)
 *Food in Ljubljana (and Velika Planina, Upper Left)*
