--- a/_posts/2019-10-05-croatia.markdown
+++ b/_posts/2019-10-05-croatia.markdown
@@ -49,12 +49,21 @@ We had a lovely three nights here, where we
 * enjoyed the local [vugava wine](https://en.wikipedia.org/wiki/Vugava)
 * had an octopus peka dinner, one of the signature dishes of the Dalmatia region
 * took a tour to see the [Blue Cave of Biševo](https://en.wikipedia.org/wiki/Blue_Grotto_(Biševo))
+* visited the picturesque Stiniva cove
 
 ![](/images/50.jpg)
 *Scooting around Vis*
 
 ![](/images/51.jpg)
 *The Blue Cave of Biševo and traditional peka dinner*
+
+There were no direct ferries to Hvar (at least on the days were were looking), so we made a quick stop back in Split. We only spent one night in Hvar on the way to Dubrovnik. Dubrovnik (like Split) was very touristy. They also seemed bent on fully capitalizing on the Game of Thrones filming (and Star Wars to a lesser extent) -- it seemed as if every other shop sold official GoT merchandise, not to mention several opportunities for GoT photo shoots. See if you can pick out the House of the Undying, King's Landing, and Blackwater Bay in our photos. Still, the walls and old town were quite beautiful.
+
+![](/images/52.jpg)
+*Ferry back to Split, picnic in Split, and Hvar town.*
+
+![](/images/53.jpg)
+*Dubrovnik (and some Hvar)*
 
 ![](/images/49.jpg)
 *Fish-heavy food along the coast*
