edits to france post

--- a/_posts/2019-11-24-france.markdown
+++ b/_posts/2019-11-24-france.markdown
@@ -9,18 +9,17 @@ TODO
 ![](/images/129.jpg)
 *France and Belgium: map of our driving*
 
+Here's an overview of our France and Belgium trip:
 * three nights in Beaune, the capital of Burgundy, where we picked up our car
 * one night in Reims, the capital of Champagne
-* one night each in Brussels, Ghent, and Bruges, Belgium (making a Pilgrimage to Westvleteren on the way)
-* one night each in Calais, Honfleur, Bayeaux, Mont Saint-Michel, and Amboise (with day stops in Dunkirk, Omaha Beach, Point du Lac)
+* one night each in Brussels, Ghent, and Bruges, Belgium (making a pilgrimage to Westvleteren on the way)
+* one night each in Calais, Honfleur, Bayeaux, Le Mont-Saint-Michel, and Amboise (with day stops in Dunkirk, Omaha Beach, La Pointe du Hoc)
 * three more nights in the Loire valley at Les Hauts de Loire
 * four nights in Paris
 
 From Marrakech, we flew into the small Dole airport in Burgundy. It was surprisingly hard to get out of the airport, since it seemed like it was designed entirely for private cars. There were no cabs waiting for pickup, no Uber or other ridesharing services, we weren't abble to call for a cab, and the closest bus line (with limited information on Google maps) was about a mile away. We finally found the right bus (very confusingly, "Dole Gare" and not "Gare" was the right stop) and took the train to Beaune.
 
-We found Beaune to be absolutely charming, with a very walkable downtown, incredible restaurants (many fully booked for days), historical buildings, and of course plentiful tasting rooms.
-
-After a quick dose of history at the [Hospices de Beaune](https://en.wikipedia.org/wiki/Hospices_de_Beaune). Given its location, it's not too surprising that wine and the hospital have a deep, shared history. For example, it was believed to have healing properties, and each patient was given a daily ration. And every year they raise ~$15M from the charity auction.
+We found Beaune to be absolutely charming, with a very walkable downtown, incredible restaurants (many fully booked for days), historical buildings, and of course plentiful tasting rooms. We started with a quick dose of history at the [Hospices de Beaune](https://en.wikipedia.org/wiki/Hospices_de_Beaune). Given its location, it's not too surprising that wine and the hospital have a deep, shared history. For example, it was believed to have healing properties, and each patient was given a daily ration. And every year, they raise ~$15M from the charity auction.
 
 Ironically, we didn't eat [Époisses](https://en.wikipedia.org/wiki/%C3%89poisses_de_Bourgogne) (produced in Burgundy) until after Burgundy. It took us until the Loire Valley to catch up here. However, we definitely ate our fill of another Burgundian delicacy, escargots, eating a couple of dozen during our stay.
 
@@ -38,10 +37,10 @@ We learned pretty early on that France (like Italy) tended to have strict lunch 
 * their food supplier missed the most recent shipment
 * closed for a private event
 
-We ended up making a lunch out of wine, chocolate, and some pastries.
+We ended up making a lunch out of wine, chocolate, and some pastries -- c'est la vie!
 
 ![](/images/107.jpg)
-*Biking the wine trail from Beaune to Chassagne Montrachet and tasting along the way*
+*Biking the Voie des Vignes from Beaune to Chassagne Montrachet and tasting along the way*
 
 Our Airbnb was across the street from the Fallot Moutarderie (making classic French mustard since 1840), and we booked an appointment for a tour. Kelly was initially skeptical, but after learning about the process and making our own mustard, she came around to appreciating the condiment.
 
@@ -78,7 +77,7 @@ After Westvleteren, we went to the Musee Dunkerque in Dunkirk, which focused on 
 ![](/images/114.jpg)
 *Honfleur harbor, cider tasting, room picnic, morning run, and spa day*
 
-In Honfleur, we stayed at Le Manoir des Impressionnistes, a tribute to the artists who painted nearbyb. It was not far from the very charming harbor, where we picked up some local delicacies for a picnic in the room. After so many days of morning runs, we relaxed in the spa before continuing on.
+In Honfleur, we stayed at Le Manoir des Impressionnistes, a tribute to the artists who painted nearby. It was not far from the very charming harbor, where we picked up some local delicacies for a picnic in the room. After so many days of morning runs, we relaxed in the spa before continuing on.
 
 ![](/images/115.jpg)
 *Lunch at Jean-Luc Tartarin in Le Havre; Calvados and cider tasting in Normandy; exploring cider groves*
@@ -91,9 +90,9 @@ We backtracked a bit to have lunch at Jean-Luc Tartarin in Le Havre, driving aga
 Bayeaux had a lot of fun things to see. I was initially a bit skeptical of the [tapestry](https://en.wikipedia.org/wiki/Bayeux_Tapestry), but really glad we went. It's a 900 hundred year old, 230 foot long illustration of how William the Conqueror conquered England. The audio guide does a good job narrating and calling out interesting features of the tapestry. A few blocks away we saw the [modern version](https://en.wikipedia.org/wiki/Game_of_Thrones_Tapestry), where the Hôtel du Doyen was housing a new tapestry that told the story of "A Song of Ice and Fire." We also stopped by the Museum of the Battle of Normandy, which had tons of detail of many battles during the war and the role of the press in documenting and communicating.
 
 ![](/images/117.jpg)
-*American and German cemetaries; Omaha beach; Point du Lac bunkers*
+*American and German cemetaries; Omaha beach; La Pointe du Hoc bunkers*
 
-We made a quick stop at Omaha beach on the way to the American cemetary overlooking the landing beaches. We didn't pick the best time to go to [La Pointe du Hoc](https://en.wikipedia.org/wiki/Pointe_du_Hoc), as it was pouring rain and hail and freezing. As we reminded ourselves that the troops saw much worse conditions, we pushed on and took some shelter in the bunkers. After one more cider stop, we arrived at (Le Mont-Saint-Michel)[https://en.wikipedia.org/wiki/Mont-Saint-Michel] later that evening.
+We made a quick stop at Omaha beach on the way to the American cemetary overlooking the landing beaches. We didn't pick the best time to go to [La Pointe du Hoc](https://en.wikipedia.org/wiki/Pointe_du_Hoc), as it was pouring rain and hail and freezing. As we reminded ourselves that the troops saw much worse conditions, we pushed on and took some shelter in the bunkers. After one more cider stop, we arrived at [Le Mont-Saint-Michel](https://en.wikipedia.org/wiki/Mont-Saint-Michel) later that evening.
 
 ![](/images/118.jpg)
 *Le Mont-Saint-Michel and plentiful seafood*
@@ -113,7 +112,7 @@ We made it to the [Château de Cheverny](https://en.wikipedia.org/wiki/Ch%C3%A2t
 ![](/images/121.jpg)
 *Les Hauts de Loire and dinner*
 
-After 9 nights of one-night stays, we spent 3 nights at (Les Hauts de Loire)[https://www.hautsdeloire.com/en/] for some much-appreciated R&R. Kelly and I celebrated with an incredible dinner at their restaurant. The estate has 180 acres and a lot of activities, and we ran, biked, played tennis, and enjoyed the spa. We biked to a nearby animal farm to play with the goats and pigs, and picked up several different goat cheeses for a picnic. We also biked along (La Loire à Vélo)[https://en.francevelotourisme.com/cycle-route/la-loire-a-velo-loire-valley-by-bike] to Château de Chaumont and had some tastings.
+After 9 nights of one-night stays, we spent 3 nights at [Les Hauts de Loire](https://www.hautsdeloire.com/en) for some much-appreciated R&R. Kelly and I celebrated with an incredible dinner at their restaurant. The estate has 180 acres and a lot of activities, and we ran, biked, played tennis, and enjoyed the spa. We biked to a nearby animal farm to play with the goats and pigs, and picked up several different goat cheeses for a picnic. We also biked along [La Loire à Vélo](https://en.francevelotourisme.com/cycle-route/la-loire-a-velo-loire-valley-by-bike) to Château de Chaumont and had some tastings.
 
 ![](/images/122.jpg)
 *Exploring Les Hauts de Loire, animal farm visit, and goat cheese picnic*
