add asia collages

--- a/_posts/2019-11-24-france.markdown
+++ b/_posts/2019-11-24-france.markdown
@@ -87,7 +87,7 @@ We backtracked a bit to have lunch at Jean-Luc Tartarin in Le Havre, driving aga
 ![](/images/116.jpg)
 *Bayeaux: WWII history; tapestry of William the Conqueror (and of Aegon / GoT)*
 
-Bayeaux had a lot of fun things to see. I was initially a bit skeptical of the [tapestry](https://en.wikipedia.org/wiki/Bayeux_Tapestry), but really glad we went. It's a 900 hundred year old, 230 foot long illustration of how William the Conqueror conquered England. The audio guide does a good job narrating and calling out interesting features of the tapestry. A few blocks away we saw the [modern version](https://en.wikipedia.org/wiki/Game_of_Thrones_Tapestry), where the Hôtel du Doyen was housing a new tapestry that told the story of "A Song of Ice and Fire." We also stopped by the Museum of the Battle of Normandy, which had tons of detail of many battles during the war and the role of the press in documenting and communicating.
+Bayeaux had a lot of fun things to see. I was initially a bit skeptical of the [tapestry](https://en.wikipedia.org/wiki/Bayeux_Tapestry), but really glad we went. It's a 900 hundred year old, 230 foot long illustration of how William the Conqueror conquered England. The audio guide does a good job narrating and calling out interesting features of the tapestry. A few blocks away, we saw the [modern version](https://en.wikipedia.org/wiki/Game_of_Thrones_Tapestry), where the Hôtel du Doyen was housing a new tapestry that told the story of "A Song of Ice and Fire." We also stopped by the Museum of the Battle of Normandy, which had tons of detail of many battles during the war and the role of the press in documenting and communicating.
 
 ![](/images/117.jpg)
 *American and German cemetaries; Omaha beach; La Pointe du Hoc bunkers*
