--- a/_posts/2019-12-22-asia.markdown
+++ b/_posts/2019-12-22-asia.markdown
@@ -15,9 +15,9 @@ Here's an overview of the Asian leg of our trip:
 * 4 nights in Bali, Indonesia (2 in Jimbaran and 2 in Seminyak)
 * 4 nights in Singapore
 
-On our way to Singapore, we experienced the worst delay of our trip of ~ 4 hours, which is pretty remarkable for such a long trip. We also had a pretty hard time even paying for a car to our hotel. Our normal trick of using ATMs to withdraw foreign currency failed over four different ATM cards, and we were still unable to load money using WeChat Pay or Alipay (new international "launches" notwithstanding...), so we bit the bullet and paid the ~30% spread at the airport money exchangers.
+On our way to Shanghai, we experienced the worst delay of our trip of ~ 4 hours, which is pretty remarkable for such a long trip. We also had a pretty hard time even paying for a car to our hotel. Our normal trick of using ATMs to withdraw foreign currency failed over four different ATM cards, and we were still unable to load money using WeChat Pay or Alipay (new international "launches" notwithstanding...), so we bit the bullet and paid the ~30% spread at the airport money exchangers.
 
-Anyhow, we were upgraded to the biggest suite on the floor, with an incredible view! We had a lovely morning exploring The Bund, getting Shanghainese soup dumplings (xiaolongbao), salted cheese tea (which we pleasantly discovered on last year's trip to China), and a curry lunch. 
+Anyhow, we were upgraded to the biggest suite on the floor, with an incredible view! We had a lovely morning exploring The Bund, getting Shanghainese soup dumplings (xiaolongbao), salted cheese tea (which we pleasantly discovered on last year's trip to China), and a curry lunch.
 
 ![](/images/130.jpg)
 *Shanghai: The Bund, cheese tea, dumplings, mediocre air quality, and our suite*
@@ -36,7 +36,7 @@ Kelly had her first massage (of many inexpensive and high-quality ones to come),
 ![](/images/132.jpg)
 *Taipei: Ningxia Night Market*
 
-The next day, we had some famous Taiwanese Beef Noodle Soup at Yongkang. From there, it was a short walk over to the Chiang Kai-shek Memorial Hall, where we watched the Changing of the Guards. We then made our way over to Taipei 101. Although we were still full from the beef noodle soup, we couldn't help but try some of Hawker Chan's inexpensive Michelin-starred chicken. While tender and flavorful, we thought it didn't measure up to its Singaporean counterpart. 
+The next day, we had some famous Taiwanese Beef Noodle Soup at Yongkang. From there, it was a short walk over to the Chiang Kai-shek Memorial Hall, where we watched the Changing of the Guards. We then made our way over to Taipei 101. Although we were still full from the beef noodle soup, we couldn't help but try some of Hawker Chan's inexpensive Michelin-starred chicken. While tender and flavorful, we thought it didn't measure up to its Singaporean counterpart.
 
 ![](/images/133.jpg)
 *Taipei: Yongkang Beef Noodles, National Chiang Kai-shek Memorial Hall, Taipei 101, and Hawker Chan*
@@ -46,7 +46,7 @@ We walked it off with a beautiful hike of Xiangshan, or elephant mountain, with 
 ![](/images/134.jpg)
 *Taipei: Xiangshan trail and Taipei 101*
 
-Finally, it was time for another night market at Raohe Street, where we had the Fuzhou Black Pepper Bun (our favorite!), Chen Dong Pork Ribs Medical Herbs Soup, Ma Shu Bao Bao mochi, taro milk, xiaolongbao, and of course some durian for dessert. 
+Finally, it was time for another night market at Raohe Street, where we had the Fuzhou Black Pepper Bun (our favorite!), Chen Dong Pork Ribs Medical Herbs Soup, Ma Shu Bao Bao mochi, taro milk, xiaolongbao, and of course some durian for dessert.
 
 ![](/images/135.jpg)
 *Taipei: Raohe St. Night Market*
@@ -61,7 +61,7 @@ Our villa in Ubud was amazing, and I think we took full advantage! We had severa
 ![](/images/137.jpg)
 *Bali: Our villa at Luwak Ubud Villas*
 
-With it being the summer, the heat and humidity were fairly oppressive. Still, we didn't let it deter us from hikes, although I ended up drenching my hiking shirt in sweat fairly early on. And the frequent breaks for fresh coconuts and refreshing teas made all the difference! 
+With it being the summer, the heat and humidity were fairly oppressive. Still, we didn't let it deter us from hikes, although I ended up drenching my hiking shirt in sweat fairly early on. And the frequent breaks for fresh coconuts and refreshing teas made all the difference!
 
 ![](/images/138.jpg)
 *Bali: Campuhan Ridge Walk, coconut at Karsa Kafe, lunch at Bridges Bali*
@@ -76,12 +76,12 @@ The next morning, our driver Yoga took us on a wonderful tour of the island. For
 ![](/images/140.jpg)
 *Bali: Morning breakfast in villa and Tegallalang Rice Terraces*
 
-Yoga drove us north  to Kintamani, with stunning views of Mount Batur and Lake Batur, a volcanic crater lake. We then stopped for one of the most scenic lunches we've had at overlooking the Mahagiri Rice Terraces. We had a private tour of [Besakih Temple](https://en.wikipedia.org/wiki/Besakih_Temple), known as the "Mother Temple" due to its size (at least 86 temples, and the largest in Bali). 
+Yoga drove us north  to Kintamani, with stunning views of Mount Batur and Lake Batur, a volcanic crater lake. We then stopped for one of the most scenic lunches we've had at overlooking the Mahagiri Rice Terraces. We had a private tour of [Besakih Temple](https://en.wikipedia.org/wiki/Besakih_Temple), known as the "Mother Temple" due to its size (at least 86 temples, and the largest in Bali).
 
 ![](/images/141.jpg)
 *Bali: Kintamani, Mahagiri, and Besakih*
 
-On the way back to Ubud, we had time to stop by the Tukad Cepung Waterfall before some delicious local cocktails and food. 
+On the way back to Ubud, we had time to stop by the Tukad Cepung Waterfall before some delicious local cocktails and food.
 
 ![](/images/142.jpg)
 *Bali: Tukad Cepung Waterfall and Night Rooster*
@@ -93,9 +93,9 @@ We had one night in Labuan Bajo on the island of Flores, a common jumping-off po
 
 Early the next morning, we stopped by Dragon Dive Komodo to finish off some paperwork and study. Everyone on the boat already had their PADI Advanced Open Water certification, and we had to catch up with the Deep Dive module, which enabled us to dive to 100 feet (and was one of the earlier dives). We had 15 dives planned (of which we ended up doing 14 and sat out one night dive) over the four nights / five days.
 
-We met our lovely divemasters, Alexis and Arno, and the rest of the passengers. Wojtek and Diana were a Polish couple who enjoyed liveaboards so much that their vacations have been this format exclusively. And Sam, Sarah, Fiona, and Julie were a group of Sydney-based friends who love diving together (I still find Sarah's daily pre-work dives to be very impressive!). 
+We met our lovely divemasters, Alexis and Arno, and the rest of the passengers. Wojtek and Diana were a Polish couple who enjoyed liveaboards so much that their vacations have been this format exclusively. And Sam, Sarah, Fiona, and Julie were a group of Sydney-based friends who love diving together (I still find Sarah's daily pre-work dives to be very impressive!).
 
-Having only logged ~ 20 dives, we had one order of magnitude less experience than our co-passengers and two less than our instructors. 
+Having only logged ~ 20 dives, we had one order of magnitude less experience than our co-passengers and two less than our instructors.
 
 ![](/images/144.jpg)
 *Dragon Dive LB Yoshi*
@@ -105,7 +105,7 @@ We soon settled into a routine, with morning coffee, tea, and nutella-banana san
 ![](/images/145.jpg)
 *Dragon Dive LB Yoshi and Padar Island*
 
-The constant putting-on and taking-off of the neoprene wetsuits and the corrosiveness of the salt water was hard on our skin. Since we don't love night dives, we ended up sitting out one of the two. Padar was stunningly beautiful, with panoramic views from its summit. 
+The constant putting-on and taking-off of the neoprene wetsuits and the corrosiveness of the salt water was hard on our skin. Since we don't love night dives, we ended up sitting out one of the two. Padar was stunningly beautiful, with panoramic views from its summit.
 
 ![](/images/146.jpg)
 *Dragon Dive LB Yoshi, Rinca Island, and Pulau Batupengah*
@@ -150,7 +150,7 @@ Later that night, we watched the Spectra Light and Water show before dinner at M
 
 The next morning we hit up Bugis Food Street and Albert Food Centre, with Ah Seng's famous Bak Chor Mee (亚成潮州肉脞面), Pondok Makan Indonesia's satay, Heng Gi Goose and Duck Rice (兴记鵝鸭饭), and Jin Jin Dessert's (津津甜品) signature Gangster Ice, with mango and durian.
 
-We had some ice-cold cocktails at the classy Atlas Bar, whose Art Deco grand lobby looked like walking straight onto a Great Gatsby set. And we had our favorite hawker food of the trip at Hill Street Tai Hwa Pork Noodles, with perfectly-flavored minced pork and fixins. 
+We had some ice-cold cocktails at the classy Atlas Bar, whose Art Deco grand lobby looked like walking straight onto a Great Gatsby set. And we had our favorite hawker food of the trip at Hill Street Tai Hwa Pork Noodles, with perfectly-flavored minced pork and fixins.
 
 ![](/images/155.jpg)
 *Singapore: Bugis Food Street, Atlas, and Hill Street Tai Hwa Pork Noodles*
@@ -165,7 +165,7 @@ We made our way back to the famous Merlion and watched Spectra from across the b
 ![](/images/157.jpg)
 *Singapore: Gardens by the Bay and Old Hill Street Police Station*
 
-For our penultimate day, we finally tried laksa, which is a sort of fish noodle soup. It was quite good at Original Famous Penang Laksa, and we did a bunch of shopping in Chinatown (for those who received durian-flavored snacks and salted egg / spicy fish skin chips). We finally made it indoors at Gardens By The Bay and walked both the Cloud Forest and the Flower Dome. Because we went around the winter holidays, the Gardens were almost entirely transformed for Christmas Wonderland. There was a light tunnel, plenty of night-time light shows and entertainment, and "snow" hours. It was quite magical! 
+For our penultimate day, we finally tried laksa, which is a sort of fish noodle soup. It was quite good at Original Famous Penang Laksa, and we did a bunch of shopping in Chinatown (for those who received durian-flavored snacks and salted egg / spicy fish skin chips). We finally made it indoors at Gardens By The Bay and walked both the Cloud Forest and the Flower Dome. Because we went around the winter holidays, the Gardens were almost entirely transformed for Christmas Wonderland. There was a light tunnel, plenty of night-time light shows and entertainment, and "snow" hours. It was quite magical!
 
 ![](/images/158.jpg)
 *Singapore: Gardens by the Bay and Original Famous Penang Laksa*
@@ -179,8 +179,3 @@ We spent our last day in Singapore with Jiun Haur, Yongfeng, Reina, and Allison,
 
 ![](/images/160.jpg)
 *Singapore: zoo, last high tea at Intercontinental, and Jewel Waterfall*
-
-
-
-
-
