add france video

--- a/_posts/2019-11-24-france.markdown
+++ b/_posts/2019-11-24-france.markdown
@@ -4,7 +4,7 @@ author: nelson
 ---
 
 Video
-TODO
+<iframe width="560" height="315" src="https://www.youtube.com/embed/jYTzN_I-_04" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 ![](/images/129.jpg)
 *France and Belgium: map of our driving*
